--- a/components/nexus-rapture/src/main/resources/org/sonatype/nexus/rapture/internal/index.vm
+++ b/components/nexus-rapture/src/main/resources/org/sonatype/nexus/rapture/internal/index.vm
@@ -15,9 +15,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Sonatype Nexus Repository</title>
+  <title>私有弹性云计算软件平台</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <meta name="description" content="Sonatype Nexus Repository"/>
+  <meta name="description" content="私有弹性云计算软件平台"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 
 #* START favicon links and meta
