--- a/components/nexus-rapture/src/main/resources/static/rapture/resources/baseapp-debug_3.css
+++ b/components/nexus-rapture/src/main/resources/static/rapture/resources/baseapp-debug_3.css
@@ -5999,18 +5999,18 @@ tr.x-grid-subtable-row {
 .x-btn-over.x-btn-nx-mode-medium {
     border-color: #575757;
     background-image: none;
-    background-color: #29b473;
+    background-color: #0060FB;
 }
 
 .x-keyboard-mode .x-btn-focus.x-btn-over.x-btn-nx-mode-medium {
     background-image: none;
-    background-color: #29b473;
-    background-image: -webkit-gradient(linear, top, bottom, color-stop(0%, #3ebc81), color-stop(50%, #29b473), color-stop(51%, #27ab6d), color-stop(0%, #29b473));
-    background-image: -webkit-linear-gradient(top, #3ebc81, #29b473 50%, #27ab6d 51%, #29b473);
-    background-image: -moz-linear-gradient(top, #3ebc81, #29b473 50%, #27ab6d 51%, #29b473);
-    background-image: -o-linear-gradient(top, #3ebc81, #29b473 50%, #27ab6d 51%, #29b473);
-    background-image: -ms-linear-gradient(top, #3ebc81, #29b473 50%, #27ab6d 51%, #29b473);
-    background-image: linear-gradient(top, #3ebc81, #29b473 50%, #27ab6d 51%, #29b473);
+    background-color: #0060FB;
+    background-image: -webkit-gradient(linear, top, bottom, color-stop(0%, #267aff), color-stop(50%, #0060FB), color-stop(51%, #0062ff), color-stop(0%, #0060FB));
+    background-image: -webkit-linear-gradient(top, #267aff, #0060FB 50%, #0062ff 51%, #0060FB);
+    background-image: -moz-linear-gradient(top, #267aff, #0060FB 50%, #0062ff 51%, #0060FB);
+    background-image: -o-linear-gradient(top, #267aff, #0060FB 50%, #0062ff 51%, #0060FB);
+    background-image: -ms-linear-gradient(top, #267aff, #0060FB 50%, #0062ff 51%, #0060FB);
+    background-image: linear-gradient(top, #267aff, #0060FB 50%, #0062ff 51%, #0060FB);
     -webkit-box-shadow: #575757 0 1px 0px 0 inset, #575757 0 -1px 0px 0 inset, #575757 -1px 0 0px 0 inset, #575757 1px 0 0px 0 inset;
     -moz-box-shadow: #575757 0 1px 0px 0 inset, #575757 0 -1px 0px 0 inset, #575757 -1px 0 0px 0 inset, #575757 1px 0 0px 0 inset;
     box-shadow: #575757 0 1px 0px 0 inset, #575757 0 -1px 0px 0 inset, #575757 -1px 0 0px 0 inset, #575757 1px 0 0px 0 inset;
@@ -6020,19 +6020,19 @@ tr.x-grid-subtable-row {
 .x-btn.x-btn-pressed.x-btn-nx-mode-medium {
     border-color: #575757;
     background-image: none;
-    background-color: #29b473;
+    background-color: #0060FB;
 }
 
 .x-keyboard-mode .x-btn-focus.x-btn-menu-active.x-btn-nx-mode-medium,
 .x-keyboard-mode .x-btn-focus.x-btn-pressed.x-btn-nx-mode-medium {
     background-image: none;
-    background-color: #29b473;
-    background-image: -webkit-gradient(linear, top, bottom, color-stop(0%, #29b473), color-stop(50%, #27ab6d), color-stop(51%, #29b473), color-stop(0%, #3ebc81));
-    background-image: -webkit-linear-gradient(top, #29b473, #27ab6d 50%, #29b473 51%, #3ebc81);
-    background-image: -moz-linear-gradient(top, #29b473, #27ab6d 50%, #29b473 51%, #3ebc81);
-    background-image: -o-linear-gradient(top, #29b473, #27ab6d 50%, #29b473 51%, #3ebc81);
-    background-image: -ms-linear-gradient(top, #29b473, #27ab6d 50%, #29b473 51%, #3ebc81);
-    background-image: linear-gradient(top, #29b473, #27ab6d 50%, #29b473 51%, #3ebc81);
+    background-color: #0060FB;
+    background-image: -webkit-gradient(linear, top, bottom, color-stop(0%, #0060FB), color-stop(50%, #0062ff), color-stop(51%, #0060FB), color-stop(0%, #267aff));
+    background-image: -webkit-linear-gradient(top, #0060FB, #0062ff 50%, #0060FB 51%, #267aff);
+    background-image: -moz-linear-gradient(top, #0060FB, #0062ff 50%, #0060FB 51%, #267aff);
+    background-image: -o-linear-gradient(top, #0060FB, #0062ff 50%, #0060FB 51%, #267aff);
+    background-image: -ms-linear-gradient(top, #0060FB, #0062ff 50%, #0060FB 51%, #267aff);
+    background-image: linear-gradient(top, #0060FB, #0062ff 50%, #0060FB 51%, #267aff);
     -webkit-box-shadow: #545454 0 1px 0px 0 inset, #545454 0 -1px 0px 0 inset, #545454 -1px 0 0px 0 inset, #545454 1px 0 0px 0 inset;
     -moz-box-shadow: #545454 0 1px 0px 0 inset, #545454 0 -1px 0px 0 inset, #545454 -1px 0 0px 0 inset, #545454 1px 0 0px 0 inset;
     box-shadow: #545454 0 1px 0px 0 inset, #545454 0 -1px 0px 0 inset, #545454 -1px 0 0px 0 inset, #545454 1px 0 0px 0 inset;
@@ -6077,7 +6077,7 @@ tr.x-grid-subtable-row {
 }
 
 .x-btn-over .x-btn-nx-mode-medium-mc {
-    background-color: #29b473;
+    background-color: #0060FB;
     background-image: url(images/btn/btn-nx-mode-medium-over-fbg.gif);
 }
 
@@ -6096,7 +6096,7 @@ tr.x-grid-subtable-row {
 }
 
 .x-keyboard-mode .x-btn-focus.x-btn-over .x-btn-nx-mode-medium-mc {
-    background-color: #29b473;
+    background-color: #0060FB;
     background-image: url(images/btn/btn-nx-mode-medium-focus-over-fbg.gif);
 }
 
@@ -6124,7 +6124,7 @@ tr.x-grid-subtable-row {
 
 .x-btn.x-btn-menu-active .x-btn-nx-mode-medium-mc,
 .x-btn.x-btn-pressed .x-btn-nx-mode-medium-mc {
-    background-color: #29b473;
+    background-color: #0060FB;
     background-image: url(images/btn/btn-nx-mode-medium-pressed-fbg.gif);
 }
 
@@ -6152,7 +6152,7 @@ tr.x-grid-subtable-row {
 
 .x-keyboard-mode .x-btn-focus.x-btn-menu-active .x-btn-nx-mode-medium-mc,
 .x-keyboard-mode .x-btn-focus.x-btn-pressed .x-btn-nx-mode-medium-mc {
-    background-color: #29b473;
+    background-color: #0060FB;
     background-image: url(images/btn/btn-nx-mode-medium-focus-pressed-fbg.gif);
 }
 
@@ -6403,11 +6403,11 @@ tr.x-grid-subtable-row {
 }
 
 .nx-header-panel .nx-health-button-green span span {
-    color: #29b473;
+    color: #0060FB;
 }
 
 .nx-header-panel .nx-health-button-green span span {
-    color: #29b473;
+    color: #0060FB;
 }
 
 .x-btn-nx-header-medium {
@@ -6664,18 +6664,18 @@ tr.x-grid-subtable-row {
 .x-btn-over.x-btn-nx-header-medium {
     border-color: #575757;
     background-image: none;
-    background-color: #29b473;
+    background-color: #0060FB;
 }
 
 .x-keyboard-mode .x-btn-focus.x-btn-over.x-btn-nx-header-medium {
     background-image: none;
-    background-color: #29b473;
-    background-image: -webkit-gradient(linear, top, bottom, color-stop(0%, #3ebc81), color-stop(50%, #29b473), color-stop(51%, #27ab6d), color-stop(0%, #29b473));
-    background-image: -webkit-linear-gradient(top, #3ebc81, #29b473 50%, #27ab6d 51%, #29b473);
-    background-image: -moz-linear-gradient(top, #3ebc81, #29b473 50%, #27ab6d 51%, #29b473);
-    background-image: -o-linear-gradient(top, #3ebc81, #29b473 50%, #27ab6d 51%, #29b473);
-    background-image: -ms-linear-gradient(top, #3ebc81, #29b473 50%, #27ab6d 51%, #29b473);
-    background-image: linear-gradient(top, #3ebc81, #29b473 50%, #27ab6d 51%, #29b473);
+    background-color: #0060FB;
+    background-image: -webkit-gradient(linear, top, bottom, color-stop(0%, #267aff), color-stop(50%, #0060FB), color-stop(51%, #0062ff), color-stop(0%, #0060FB));
+    background-image: -webkit-linear-gradient(top, #267aff, #0060FB 50%, #0062ff 51%, #0060FB);
+    background-image: -moz-linear-gradient(top, #267aff, #0060FB 50%, #0062ff 51%, #0060FB);
+    background-image: -o-linear-gradient(top, #267aff, #0060FB 50%, #0062ff 51%, #0060FB);
+    background-image: -ms-linear-gradient(top, #267aff, #0060FB 50%, #0062ff 51%, #0060FB);
+    background-image: linear-gradient(top, #267aff, #0060FB 50%, #0062ff 51%, #0060FB);
     -webkit-box-shadow: #575757 0 1px 0px 0 inset, #575757 0 -1px 0px 0 inset, #575757 -1px 0 0px 0 inset, #575757 1px 0 0px 0 inset;
     -moz-box-shadow: #575757 0 1px 0px 0 inset, #575757 0 -1px 0px 0 inset, #575757 -1px 0 0px 0 inset, #575757 1px 0 0px 0 inset;
     box-shadow: #575757 0 1px 0px 0 inset, #575757 0 -1px 0px 0 inset, #575757 -1px 0 0px 0 inset, #575757 1px 0 0px 0 inset;
@@ -6685,19 +6685,19 @@ tr.x-grid-subtable-row {
 .x-btn.x-btn-pressed.x-btn-nx-header-medium {
     border-color: #575757;
     background-image: none;
-    background-color: #29b473;
+    background-color: #0060FB;
 }
 
 .x-keyboard-mode .x-btn-focus.x-btn-menu-active.x-btn-nx-header-medium,
 .x-keyboard-mode .x-btn-focus.x-btn-pressed.x-btn-nx-header-medium {
     background-image: none;
-    background-color: #29b473;
-    background-image: -webkit-gradient(linear, top, bottom, color-stop(0%, #29b473), color-stop(50%, #27ab6d), color-stop(51%, #29b473), color-stop(0%, #3ebc81));
-    background-image: -webkit-linear-gradient(top, #29b473, #27ab6d 50%, #29b473 51%, #3ebc81);
-    background-image: -moz-linear-gradient(top, #29b473, #27ab6d 50%, #29b473 51%, #3ebc81);
-    background-image: -o-linear-gradient(top, #29b473, #27ab6d 50%, #29b473 51%, #3ebc81);
-    background-image: -ms-linear-gradient(top, #29b473, #27ab6d 50%, #29b473 51%, #3ebc81);
-    background-image: linear-gradient(top, #29b473, #27ab6d 50%, #29b473 51%, #3ebc81);
+    background-color: #0060FB;
+    background-image: -webkit-gradient(linear, top, bottom, color-stop(0%, #0060FB), color-stop(50%, #0062ff), color-stop(51%, #0060FB), color-stop(0%, #267aff));
+    background-image: -webkit-linear-gradient(top, #0060FB, #0062ff 50%, #0060FB 51%, #267aff);
+    background-image: -moz-linear-gradient(top, #0060FB, #0062ff 50%, #0060FB 51%, #267aff);
+    background-image: -o-linear-gradient(top, #0060FB, #0062ff 50%, #0060FB 51%, #267aff);
+    background-image: -ms-linear-gradient(top, #0060FB, #0062ff 50%, #0060FB 51%, #267aff);
+    background-image: linear-gradient(top, #0060FB, #0062ff 50%, #0060FB 51%, #267aff);
     -webkit-box-shadow: #545454 0 1px 0px 0 inset, #545454 0 -1px 0px 0 inset, #545454 -1px 0 0px 0 inset, #545454 1px 0 0px 0 inset;
     -moz-box-shadow: #545454 0 1px 0px 0 inset, #545454 0 -1px 0px 0 inset, #545454 -1px 0 0px 0 inset, #545454 1px 0 0px 0 inset;
     box-shadow: #545454 0 1px 0px 0 inset, #545454 0 -1px 0px 0 inset, #545454 -1px 0 0px 0 inset, #545454 1px 0 0px 0 inset;
@@ -6742,7 +6742,7 @@ tr.x-grid-subtable-row {
 }
 
 .x-btn-over .x-btn-nx-header-medium-mc {
-    background-color: #29b473;
+    background-color: #0060FB;
     background-image: url(images/btn/btn-nx-header-medium-over-fbg.gif);
 }
 
@@ -6761,7 +6761,7 @@ tr.x-grid-subtable-row {
 }
 
 .x-keyboard-mode .x-btn-focus.x-btn-over .x-btn-nx-header-medium-mc {
-    background-color: #29b473;
+    background-color: #0060FB;
     background-image: url(images/btn/btn-nx-header-medium-focus-over-fbg.gif);
 }
 
@@ -6789,7 +6789,7 @@ tr.x-grid-subtable-row {
 
 .x-btn.x-btn-menu-active .x-btn-nx-header-medium-mc,
 .x-btn.x-btn-pressed .x-btn-nx-header-medium-mc {
-    background-color: #29b473;
+    background-color: #0060FB;
     background-image: url(images/btn/btn-nx-header-medium-pressed-fbg.gif);
 }
 
@@ -6817,7 +6817,7 @@ tr.x-grid-subtable-row {
 
 .x-keyboard-mode .x-btn-focus.x-btn-menu-active .x-btn-nx-header-medium-mc,
 .x-keyboard-mode .x-btn-focus.x-btn-pressed .x-btn-nx-header-medium-mc {
-    background-color: #29b473;
+    background-color: #0060FB;
     background-image: url(images/btn/btn-nx-header-medium-focus-pressed-fbg.gif);
 }
 
@@ -7408,7 +7408,7 @@ tr.x-grid-subtable-row {
 
 .x-panel-nx-feature-menu .x-panel-body-nx-feature-menu .x-grid-item-selected .x-grid-cell {
     color: #fff;
-    background-color: #29b473;
+    background-color: #0060FB;
 }
 
 .x-panel-nx-feature-menu .x-panel-body-nx-feature-menu .x-grid-item-selected .x-grid-cell:hover {
