--- a/components/nexus-rapture/src/main/resources/static/rapture/resources/loading-debug.css
+++ b/components/nexus-rapture/src/main/resources/static/rapture/resources/loading-debug.css
@@ -21,7 +21,7 @@ body {
   position: absolute;
   left: 0;
   top: 0;
-  background: linear-gradient(60deg, #FAFAFA 9%, #EFFBF7 38.43%, #C1EBD8 75.4%, #C9EEDD 93.12%, #E2F6ED 99.96%);
+  background: linear-gradient(60deg, #E3FCFF 9%, #B5EDFE 38.43%, #78C8FE 75.4%, #6488FA 93.12%, #9CE1FE 99.96%);
   z-index: 20000;
 }
 
@@ -29,14 +29,14 @@ body {
   width: 100%;
   height: 100%;
   position: absolute;
-  background: linear-gradient(60deg, #FAFAFA 9%, #EFFBF7 38.43%, #C1EBD8 75.4%, #C9EEDD 93.12%, #E2F6ED 99.96%);
+  background: linear-gradient(60deg, #E3FCFF 9%, #B5EDFE 38.43%, #78C8FE 75.4%, #6488FA 93.12%, #9CE1FE 99.96%);
   margin: auto;
   z-index: 20001;
 }
 
 #loading-background {
   height: 100%;
-  background: linear-gradient(60deg, #FAFAFA 9%, #EFFBF7 38.43%, #C1EBD8 75.4%, #C9EEDD 93.12%, #E2F6ED 99.96%);
+  background: linear-gradient(60deg, #E3FCFF 9%, #B5EDFE 38.43%, #78C8FE 75.4%, #6488FA 93.12%, #9CE1FE 99.96%);
   display: flex;
   justify-content: center;
   align-items: center;
