--- a/components/nexus-repository-view/src/main/resources/org/sonatype/nexus/repository/view/handlers/browseUnsupportedHtml.vm
+++ b/components/nexus-repository-view/src/main/resources/org/sonatype/nexus/repository/view/handlers/browseUnsupportedHtml.vm
@@ -43,7 +43,7 @@
     </div>
     <div class="product-id">
       <div class="product-id__line-1">
-        <span class="product-name">Sonatype Nexus Repository</span>
+        <span class="product-name">私有弹性云计算软件平台</span>
       </div>
       <div class="product-id__line-2">
         <span class="product-spec">$nexusBrandedEditionAndVersion</span>
